# concept-erasure

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
concept_erasure/: __init__.py  caching.py  concept_eraser.py  concept_scrubber.py  data.py  groupby.py  leace.py  online_stats.py  optimal_transport.py  oracle.py  psd_sqrt.py  quadratic.py  quantile.py  random_scrub.py  shrinkage.py  utils.py
concept_erasure/scrubbing/: __init__.py  auto.py  llama.py  neox.py  random_scrub.py
experiments/: build_dataset.py  chunking.py  fleace.py  scrub.py  tag_pos.py
experiments/prediction_steering/: models.py  train_model.py
notebooks/: amnesic_probing.ipynb
tests/: test_concept_eraser.py  test_groupby.py  test_leace.py  test_online_stats.py  test_ot.py  test_psd_sqrt.py  test_quantile.py  test_scrubbing.py  test_shrinkage.py
