[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "concept-erasure"
description = "Erasing concepts from neural representations with provable guarantees"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["fairness", "interpretability", "explainable-ai"]
license = {text = "MIT License"}
dependencies = [
    "torch",
]
version = "0.2.1"

[project.optional-dependencies]
dev = [
    "numpy",
    "pre-commit",
    "pytest",
    "pyright",
    "scikit-learn",

    # Integration with HuggingFace datasets and transformers for concept scrubbing
    "datasets",
    # 4.0 introduced the breaking change of using return_dict=True by default
    "transformers>=4.0.0",
]

[project.scripts]
elk = "elk.__main__:run"

[tool.pyright]
include = ["concept_erasure*"]
reportPrivateImportUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["concept_erasure*"]

[tool.ruff]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
# See https://beta.ruff.rs/docs/rules/ for more possible rules
select = ["E", "F", "I"]
# Same as Black.
line-length = 88
# Avoid automatically removing unused imports in __init__.py files.
# Such imports will be flagged with a dedicated message suggesting
# that the import is either added to the module's __all__ symbol
ignore-init-module-imports = true
